# ME-Frp-Launcher-Tauri

./: index.html  package.json  tsconfig.json
.github/workflows/: build-app.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: dashboard.scss  variables.scss
src/assets/styles/auth/: iForgot.scss  login.scss  register.scss
src/assets/styles/components/: homeFooter.scss  homeMenu.scss  userInfoGrid.scss
src/assets/styles/dashboard/: about.scss  cash.scss  createProxy.scss  help.scss  home.scss  logs.scss  manageProxies.scss  nodeStatus.scss  profile.scss
src/components/: LeftMenu.vue  TopMenu.vue  UserInfoGrid.vue
src/constants/: theme.ts
src/router/: index.ts
src/shared/: menuOptions.ts
src/shared/api/: admin.ts  auth.ts  config.ts  public.ts
src/types/: adminApi.ts  authApi.ts  index.ts  proxy.ts  publicApi.ts
src/views/auth/: Login.vue  Register.vue  iForgot.vue
src/views/dashboard/: About.vue  CreateProxy.vue  Home.vue  Logs.vue  ManageProxies.vue  NodeStatus.vue  Profile.vue
src/views/dashboard/admin/: Nodes.vue  Products.vue  Proxies.vue  System.vue  Users.vue
