[package]
name = "ME-Frp-Launcher"
version = "5.0.0"
description = "ME Frp Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "me_frp_launcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tauri-plugin-process = "2"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
tauri-plugin-os = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

